Tue Oct  1 09:40:31 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix terminal ANSI sequence handling in linedit

Wed Sep 18 09:25:06 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* increase internal compiler data sizes

Thu Jul  4 13:17:07 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in gprolog.h (invalid 64 bits PL_MAX_INTEGER)

Fri Apr 12 17:17:50 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* add Prolog flags c_cc_version_data
	* fix a regression bug in linedit
	* fix a little bug in the debugger
	* add subtract/3 built-in predicate

Wed Mar 27 16:35:02 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* add new C foreign interface functions converting term to/from C strings

Tue Mar 26 10:23:05 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* modify top-level banner to show 32/64 bits, compile date, compiler name
	* modify Linedit: fix Prolog prompt when Linedit is not activated
	* modify linedit: accept gui=silent in env var LINEDIT
	  (does not warn if the windows gui DLL is not found)
	* fixes for Windows 8 (i686 and x86_64) with MSVS 2012, mingw64 gcc > 4.5.3
	* add Prolog flags address_bits, compiled_at, c_cc, c_cflags, c_ldflags

Thu Mar 14 12:46:35 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the FD solver (option backtracks in fd_labeling)
	* improve the FD solver (better propagation for reified constraints at labeling)
	* improve the FD solver (add labeling option: value_method(bisect))

Mon Mar 11 15:42:31 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* improve the FD solver (avoid some cases of C stack overflow, improved fd_domain/3)
	* add PlULong to gprolog.h and PlThrow(ball) to C foreign interface

Mon Feb 25 13:57:51 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the FD solver (regression bug in 1.4.2)

Wed Nov 28 17:04:46 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the compiler for byte-code with op/3 directive

Thu Nov 22 16:20:23 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the debugger