@@ -1,5 +1,8 @@
 Change in GNU Prolog version 1.4.5:
 
+* fix problems with Apple gcc = LLVM version 5.0 (clang-500.2.79)
+* remove clang warnings (uninitialized variables)
+* fix bugs in the lexer of the form 0bop 2 when bop is an infix op
 * fix terminal ANSI sequence handling in linedit
 * increase internal compiler data sizes
 * fix bug in gprolog.h (invalid 64 bits PL_MAX_INTEGER)
