@@ -1,3 +1,9 @@
+Tue Nov 12 10:17:10 CET 2013 <Daniel.Diaz@univ-paris1.fr>
+
+	* fix problems with Apple gcc = LLVM version 5.0 (clang-500.2.79)
+	* remove clang warnings (uninitialized variables)
+	* fix bugs in the lexer of the form 0bop 2 when bop is an infix op
+
 Tue Oct  1 09:40:31 CEST 2013 <Daniel.Diaz@univ-paris1.fr>
 
 	* fix terminal ANSI sequence handling in linedit
